--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   firebase_storage: ^5.0.1
   flutter_spinkit: ^4.1.2
   image_picker: ^0.6.7+14
+  intl: ^0.16.1
+  font_awesome_flutter: ^8.10.1
+  path: ^1.7.0
+  flutter_data_stream_builder: ^0.0.6
+
 
 dev_dependencies:
   flutter_test:
